--- a/html/build.gradle
+++ b/html/build.gradle
@@ -20,8 +20,8 @@ gwt {
 
   // Needs to be in front of "modules" below.
   src = files(file('src/main/java'), project(":core").file('src/main/java'))
-  modules += ["com.lucassbertol.codebreaker.GdxDefinition"]
-  devModules += ["com.lucassbertol.codebreaker.GdxDefinitionSuperdev"]
+  modules += ["io.github.hazard_attack.GdxDefinition"]
+  devModules += ["io.github.hazard_attack.GdxDefinitionSuperdev"]
   project.webAppDirName = "webapp"
 
   compiler.strict = true
@@ -157,8 +157,6 @@ tasks.compileGwt.dependsOn("addSource")
 tasks.draftCompileGwt.dependsOn("addSource")
 tasks.checkGwt.dependsOn("addSource")
 
-java.sourceCompatibility = JavaVersion.VERSION_21
-java.targetCompatibility = JavaVersion.VERSION_21
 sourceSets.main.java.srcDirs = [ "src/main/java/" ]
 
 eclipse.project.name = appName + "-html"
