--- a/html/build.gradle
+++ b/html/build.gradle
@@ -37,6 +37,8 @@ dependencies {
   implementation "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
   implementation "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
   implementation "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
+  implementation "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+  implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
   implementation "com.google.gwt:gwt-user:$gwtFrameworkVersion"
 }
 
